# cpp-cool-projects

./: ASSESSMENT.md  CMakeSettings.json  README.md  SOLUTION.md  run-cmake.bat
src/des/: DESSimulator.h  Event.h
ue01-serhiiKhokhlov/: CMakeLists.txt  CMakeSettings.json  README.md  SOLUTION.md  run-cmake.bat
ue01-serhiiKhokhlov/src/breakout/src/: controller.h  engines.h  event.h  event_listener.h  game_engine.h  main.cpp  simple_game_object.h
ue01-serhiiKhokhlov/src/breakout/src/custom-classes/: breakout_game_objs.h
ue01-serhiiKhokhlov/src/intro/src/: main.cpp
ue02-serhiiKhokhlov/: .gitignore  CMakeLists.txt
ue02-serhiiKhokhlov/doc/: hü2swo-tests.xlsx
ue02-serhiiKhokhlov/src/des/: DESSimulator.cpp  ResourcePool.h  Time.h  main.cpp
ue05-serhiiKhokhlov/: .gitignore  CMakeLists.txt  README.md  SOLUTION.md
ue05-serhiiKhokhlov/doc/: tetris_gameplay_test.mov
ue05-serhiiKhokhlov/src/bsp1/: board.c  board.h  primitives.c  primitives.h  tetrimino.c  tetrimino.h  tetris.c  timer.c  timer.h  window.c  window.h
ue07-serhiiKhokhlov/: .gitignore  README.md  SOLUTION.md
ue07-serhiiKhokhlov/src/bsp1/: chess.cpp  chess.h  chess_board.cpp  chess_board.h  main.cpp
